test_data/Xml/Unexpected/Unserializable/InvalidClassName/assetInformation/wrong.xml.exception
Expected an element representing an instance of class AssetInformation with element name assetInformation, but got: utterlyInvalid at: the beginning